--- a/assets/project/listProjects.json
+++ b/assets/project/listProjects.json
@@ -5,10 +5,22 @@
             "image": "assets/images/portfolio1.jpg",
             "tools": ["ReactJs", "Redux","Tailwind CSS", "NodeJs", "JsonWebToken", "SWR"],
             "description": "The Sportswear E-commerce Website is a comprehensive platform designed to cater to the needs of sportswear enthusiasts. It offers a wide range of sportswear products for men, women, and children. Developed as a final project for a bootcamp at harisenin.com.",
+            "keyfeatures" :["Product Listing: Display a comprehensive list of sportswear products, including images, names, descriptions, prices, and categories.", "Product Details: Allow users to view detailed information about a selected product, including larger images, full descriptions, prices, and customer reviews.", "Category-Based Filtering: Enable users to filter products based on categories such as men, women, and children, allowing them to browse specific types of sportswear easily.","Search Functionality: Implement a search bar that enables users to find products quickly by name or category.", "Add-to-Cart Feature: Allow users to add products to a shopping cart, update product quantities, and remove products from the cart.", "User Authentication: Implement user authentication using JsonWebToken (JWT), allowing users to securely log in and manage their accounts.", "Responsive Design: Ensure the application is fully responsive and provides a consistent user experience across various devices and screen sizes.", "Efficient State Management: Utilize Redux for efficient state management, ensuring consistent application state across all components.", "Optimized Data Fetching: Use SWR (Stale-While-Revalidate) for optimized data fetching, ensuring the application always displays up-to-date information."],
             "contribute" : ["Category Integration: Developed the functionality to seamlessly integrate product categories into the website's structure, enabling organized navigation and product discovery.", "Add-to-Cart Feature: Implemented the add-to-cart functionality, allowing users to effortlessly add selected items to their shopping cart for subsequent checkout.", "Frontend and Backend Integration: Ensured smooth communication between the frontend and backend layers, facilitating seamless data exchange and user interactions.", "State Management: Contributed to the implementation of Redux for efficient state management, ensuring consistent application state across components."],
             "linklive" : "",
             "linksc" : "https://github.com/ZhidanRn/project-harisenin-fullstack-kel7"
             
+        },
+
+        {
+            "id": "2",
+            "title": "E-comerce App",
+            "image": "assets/images/portfolio2.jpg",
+            "tools": ["ReactJs", "Redux","Tailwind CSS"],
+            "description": "The objective of this project is to develop a fully functional e-commerce web application using ReactJS for the front-end and the FakeStore API for the back-end data. The application aims to provide users with a seamless shopping experience by displaying a variety of products and enabling product search.",
+            "keyfeatures" : ["Product Listing: Display a comprehensive list of products fetched from the FakeStore API, including product images, names, descriptions, prices, and categories.", "Product Details: Allow users to view detailed information about a selected product, including a larger image, full description and price", "Category-Based Filtering: Enable users to filter products based on categories, allowing them to browse through specific types of products easily.","Search Functionality: Implement a search bar that enables users to find products by name or category quickly and efficiently.", "Cart Management: Enable users to add products to a shopping cart, update product quantities, and remove products from the cart.", "Responsive Design: Ensure the application is fully responsive and provides a consistent user experience across various devices and screen sizes."],
+            "contribute": "",
+            "linklive" : "https://eccomerce-apps.vercel.app/",
+            "linksc" : "https://github.com/ZhidanRn/eccomerceReactJs"
         }
-        
 ]
